# Python-Project

./: .gitignore  LICENSE  README.md  README.rst  main.py  pyproject.toml  requirements.txt
docs/: Makefile  makefile.txt
docs/source/: conf.py  index.rst
src/spidam/: __main__.py  controller.py  model.py  view.py
tests/: model.py
