[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.spidam]
packages = ["src/spidam"]
include = [
  "src/spidam/*.py",
  "tests",
  "docs"
]

[project]
name = "spidam"
version = "0.1"
authors = [
  { name="Samuel Jones" },
  { name="Alexander Chheng" },
  { name="Hugo Paredes" },
  { name="Jayden Lopez" },
]
description = "Scientific Python Interactive Data Acoustic Modeling "
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sjones5516/spidam"
Issues = "https://github.com/sjones5516/spidam/issues"